[metadata]
name = paypack-py
version = 0.0.1
author = Paypack-dev
author_email = info@quarksgroup.rw
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/quarksgroup/paypack-py
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True